--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -4,16 +4,14 @@ $toolbarSpritePath: image-path('/assets/toolbar.png');
 //$iconSpritePath: image-path('/assets/glyphicons2.png');
 $iconWhiteSpritePath: image-path('glyphicons-halflings-white.png');
 
-$navbarBackground: #555;
-$navbarBackgroundHighlight: #888;
-$navbarText: #eee;
-$navbarLinkColor: #eee;
+//$navbarBackground: #555;
+//$navbarBackgroundHighlight: #888;
+//$navbarText: #eee;
+//$navbarLinkColor: #eee;
 
 @import "bootstrap";
 
-body {
-  padding-top: 20px;
-}
+body { padding-top: 60px; }
 
 /* Modal Header styling */
 .modal-header {
@@ -25,19 +23,45 @@ body {
   color: #b5b2b2;
   font-size: small;
 }
+/* Wrapper for page content to push down footer */
+#wrap {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  /* Negative indent footer by it's height */
+  margin: 0 auto -60px;
+}
 
-/*Footer Styling*/
+/* Set the fixed height of the footer here */
+#push,
 #footer {
-  text-align: center;
-  padding: 4px 0;
-  color: #b5b2b2;
-  font-size: x-small;
+  height: 60px;
+}
+#footer {
+  background-color: #f5f5f5;
 }
 
-#footer a {
-  color: #b5b2b2;
-  font-size: x-small;
+/* Lastly, apply responsive CSS fixes as necessary */
+@media (max-width: 767px) {
+  #footer {
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
+///*Footer Styling*/
+//#footer {
+//  text-align: center;
+//  padding: 4px 0;
+//  color: #b5b2b2;
+//  font-size: x-small;
+//}
+//
+//#footer a {
+//  color: #b5b2b2;
+//  font-size: x-small;
+//}
 
 .form-signin {
   max-width: 300px;
