--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -80,10 +80,10 @@
                     <span class="muted" style="font-size: 10px;">
                           <small>
                             <% if reply.updated_at > reply.created_at %> <i class="icon-edit"></i>
-                                ( <%= t("global.edited") %> <%= localize reply.updated_at, :format => :medium %> )
+                                ( <%= t("global.edited") %> <%= l reply.updated_at, :format => :medium %> )
                             <% end %>
                             <%= time_ago_in_words(reply.created_at) %> <%= t("global.ago") %>
-                            (<%= localize reply.created_at, :format => :medium %>
+                            (<%= l reply.created_at, :format => :medium %>
                             )
                           </small>
                                                </span>
@@ -108,13 +108,13 @@
     <small>
       <strong><%= t "global.created_at" %>
         :</strong><%= time_ago_in_words(@work_order.created_at) %> <%= t "global.ago" %>
-      (<%= localize @work_order.created_at, :format => :short %>) <%= t "global.by" %> <%= @work_order.created_by %>.
+      (<%= l @work_order.created_at, :format => :short %>) <%= t "global.by" %> <%= @work_order.created_by %>.
 
       <% if @work_order.updated_at == nil %>
       <% else %>
           | <strong><%= t "global.updated_at" %>
       :</strong><%= time_ago_in_words(@work_order.updated_at) %> <%= t "global.ago" %>
-          (<%= localize @work_order.updated_at, :format => :short %>
+          (<%= l @work_order.updated_at, :format => :short %>
           ) <%= t "global.by" %> <%= @work_order.edited_by %>.
       <% end %>
     </small>
@@ -133,7 +133,7 @@
           <% if @invoiced %>
               <%= menu_button t("invoice.show"), invoice_path(@invoiced.id), "icon-list-alt icon-white" %>
           <% else %>
-              <%= menu_button t("invoice.create"), new_work_order_invoice_path(:work_order_id => @work_order.id), "icon-list-alt icon-white" %>
+              <%= menu_button t("invoice.create"), new_work_order_invoice_path(:work_order_id => @work_order.id, :user_id => @work_order.user_id), "icon-list-alt icon-white" %>
           <% end %>
       <% else %>
       <% end %>
