--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -7,6 +7,7 @@
     </style>
 <h1 class="offset3"><%= (t "user.t_new_user") %></h1>
 <div class="span10">
+  <%= help_button('user/create_new') %>
   <%= simple_form_for @user, :html => { :class => "form-horizontal"} do |f| %>
       <div class="span5 well">
         <h4 class="offset4"><%= t("global.required") %></h4>
