Added some styling to the TOC and also fixed some spelling.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
 </style>
 <h1 class="offset3"><%= t "user.t_new_user" %></h1>
 <div class="span12">
-  <%= help_button('user/create_new') %>
+  <%= help_button('users_create_new') %>
   <%= simple_form_for @user, :html => { :class => "form-horizontal"} do |f| %>
       <div class="span5 well">
         <h4 class="offset4"><%= t("global.required") %></h4>
