--- a/app/views/users/_employees_list.html.erb
+++ b/app/views/users/_employees_list.html.erb
@@ -13,12 +13,12 @@
 
       <thead>
       <tr>
-        <th><%= t "user.number" %></th>
+        <th><%=  sortable "id", (t "user.number") %></th>
         <th><%= sortable "name", (t "user.name") %></th>
         <th><%= (t "user.active_wo") %></th>
-        <th><%= t "user.username" %></th>
-        <th><%= t "global.phone" %></th>
-        <th><%= t "global.mobile" %></th>
+        <th><%=  sortable "username",(t "user.username") %></th>
+        <th><%=  sortable "phone",(t "global.phone") %></th>
+        <th><%=  sortable "mobile",(t "global.mobile") %></th>
       </tr>
       </thead>
       <tbody>
