--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -16,7 +16,7 @@
         <th><%= t "user.number" %></th>
         <th><%= sortable "name", (t "user.name") %></th>
         <th><%= (t "user.active_wo") %></th>
-        <th><%= t "user.username" %></th>
+        <th><%= sortable "name",(t "user.username") %></th>
         <th><%= t "global.phone" %></th>
         <th><%= t "global.mobile" %></th>
         <th align="center"><%= t "supplier.actions" %></th>
