--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,6 +23,7 @@
   <div class="span2">
       <%= menu_button t("global.create"), new_user_work_order_path(:user_id => current_user.id),  "icon-pencil icon-white" if current_user.client  %>
       <%= menu_button t("global.create"), clients_path, "icon-pencil icon-white" if can? :manage, User %>
+      <%= menu_button t("global.edit"), edit_user_path, "icon-pencil icon-white" if can? :manage, User %>
     </div>
 </div>
 
@@ -85,6 +86,4 @@
 
     </table><br>
   </fieldset>
-
-  </div>
 
