Updated internal help file system.

--- a/app/views/layouts/_markdown_examples.html.erb
+++ b/app/views/layouts/_markdown_examples.html.erb
@@ -70,6 +70,10 @@
             <td>`Inline code`</td>
             <td><%= markdown("`Inline code`") %> </td>
           </tr>
+          <tr>
+            <td>![Alt text](/path/to/img.jpg "Optional title")</td>
+            <td><%= markdown("![Logo](/images/logo.png)") %></td>
+          </tr>
           </tbody>
         </table>
       </div>
